<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.jenkins-ci.plugins</groupId>
        <artifactId>plugin</artifactId>
        <version>5.28</version>
        <relativePath/>
    </parent>

    <groupId>io.jenkins.plugins</groupId>
    <artifactId>job-backup</artifactId>
    <version>0.0.2</version>
    <packaging>hpi</packaging>

    <name>Job Backup &amp; Restore</name>
    <url>https://github.com/franciscoernestoteixeira/jenkins-${project.artifactId}-plugin</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
        </license>
    </licenses>

    <properties>
        <!-- Jenkins baseline -->
        <jenkins.version>2.528.3</jenkins.version>

        <!-- Java compatibility: build with JDK 21, emit Java 17 bytecode -->
        <maven.compiler.release>17</maven.compiler.release>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.level>17</java.level>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- Folder support (CloudBees Folders plugin) -->
        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>cloudbees-folder</artifactId>
            <version>6.1042.v37b_8229708e4</version>
        </dependency>

        <!-- JSON API (optional, used by many Jenkins plugins) -->
        <!--
        <dependency>
            <groupId>org.jenkins-ci.plugins</groupId>
            <artifactId>json-api</artifactId>
            <version>20250517-173.v596efb_962a_31</version>
        </dependency>
        -->

        <dependency>
            <groupId>io.jenkins.plugins</groupId>
            <artifactId>ionicons-api</artifactId>
            <version>94.vcc3065403257</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Jenkins plugin packaging -->
            <plugin>
                <groupId>org.jenkins-ci.tools</groupId>
                <artifactId>maven-hpi-plugin</artifactId>
            </plugin>

            <!-- Enforce Java compatibility -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[17,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
